# ros_fiducials

./: .gitignore  README.md
fiducial_conversions/: CMakeLists.txt  README.md  package.xml
fiducial_conversions/include/fiducial_conversions/: fiducial_stl.hpp
fiducial_conversions/src/fiducial_conversions/: fiducial_stl.cpp
fiducial_conversions/test/: data_generation.hpp  ros_fiducials_stl_test.cpp  test_fiducial_stl.cpp
fiducial_detectors/: CMakeLists.txt  README.md  package.xml
fiducial_detectors/config/: apriltag_detector_default.yaml  aruco_detector_default.yaml
fiducial_detectors/include/fiducial_detectors/: apriltag_defined_families.h  apriltag_detector.hpp  aruco_detector.hpp  fiducial_detector.hpp  (+1 more)
fiducial_detectors/launch/: apriltag_detector.launch  aruco_detector.launch
fiducial_detectors/scripts/: apriltag_includes_update.py
fiducial_detectors/src/: apriltag_main.cpp  aruco_main.cpp
fiducial_msgs/: CMakeLists.txt  README.md  package.xml
ros_fiducials_conversions/: CMakeLists.txt  README.md  package.xml
ros_fiducials_detectors/: CMakeLists.txt  README.md  package.xml
ros_fiducials_detectors/config/: aruco_detector_default.yaml
ros_fiducials_detectors/launch/: apriltag_detector.launch  aruco_detector.launch
ros_fiducials_detectors/scripts/: apriltag_includes_update.py
ros_fiducials_detectors/src/: apriltag_main.cpp  aruco_main.cpp
ros_fiducials_msgs/: CMakeLists.txt  README.md  package.xml
ros_fiducials_msgs/include/ros_fiducials_msgs/: conversions.hpp
ros_fiducials_msgs/msg/: Detection.msg  DetectionArray.msg
(+5 files in other folders)
